deps/jansson/test/suites/invalid/unterminated-array-and-object/error.strip
1 2 2
string or '}' expected near end of file
